<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/phone_settingsLabel"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/optionsLabel"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:paddingLeft="30dp"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/ic_more_vert"
            android:paddingRight="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:padding="12dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:gravity="center">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.1"
        android:padding="10dp"
        android:background="@color/black">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_marginHorizontal="15dp"
            android:paddingHorizontal="10dp"
            android:text="@string/backButtonLabel"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.34"
            android:text="@string/homeButtonLabel"
            android:background="@color/gray"
            android:layout_marginHorizontal="15dp"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:paddingHorizontal="10dp"
            android:drawableLeft="@drawable/ic_home"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.34"
            android:text="@string/call5ButtonLabel"
            android:background="@color/colorAccent"
            android:layout_marginHorizontal="15dp"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:paddingHorizontal="10dp"
            android:drawableRight="@drawable/ic_star_border"/>

    </LinearLayout>

</LinearLayout>